--- a/v1.md
+++ b/v1.md
@@ -133,3 +133,31 @@ sudo apt-get install supervisor nginx
 sudo ln -s /var/www/webpy-app/metapolator/webapp_configs/supervisor.conf /etc/supervisor/conf.d/metapolator.conf;
 sudo ln -s /var/www/webpy-app/metapolator/webapp_configs/nginx.conf /etc/nginx/sites-enabled/metapolator.conf;
 ```
+
+## Contributing
+
+### License
+
+This project is licensed under the [GNU General Public License v3.0](http://www.gnu.org/copyleft/gpl.html) and your contributions are welcome via Github at <https://github.com/metapolator/metapolator>
+
+### Front End
+
+HTML templates are in [`/templates`](https://github.com/metapolator/metapolator/tree/master/templates) using [web.py's native template system](http://webpy.org/docs/0.3/templetor).
+
+JS and CSS are in [`/static`](https://github.com/metapolator/metapolator/tree/master/static/js)
+
+We don't use CoffeeScript because it [makes code harder to read](ceronman.com/2012/09/17/coffeescript-less-typing-bad-readability/) and the [scoping is global](https://donatstudios.com/CoffeeScript-Madness).
+
+## Back End
+
+TODO: Add Code review youtube video link
+
+We use JSON a lot, so you might like to install [JSONview](https://addons.mozilla.org/en-US/firefox/addon/jsonview/) for Firefox or [JSONviewer](https://chrome.google.com/webstore/detail/json-viewer/gbmdgpbipfallnflgajpaliibnhdgobh/related) for Chromium.
+
+## Thanks
+
+Core Development Team: Simon Egli, Lasse Fister, Alex Troush
+
+Contributors: Vitaly Volkov, Walter Egli, Nicolas Pauly, Wei Huang, you?
+
+Thanks to [metaflop](http://www.metaflop.com) for inspiration and Dave Crossland for leading to this project!
