--- a/v1.md
+++ b/v1.md
@@ -1,3 +1,6 @@
+[![Build Status](https://drone.io/github.com/metapolator/metapolator/status.png)](https://drone.io/github.com/metapolator/metapolator/latest)
+
+
 In 2013 (and the first few months of 2014) a v1 prototype was developed. This is now deprecated software, and this page acts as an archive of v1 related documentation.
 
 ## Tutorial
