--- a/v1.md
+++ b/v1.md
@@ -1,11 +1,9 @@
-[![Build Status](https://drone.io/github.com/metapolator/metapolator/status.png)](https://drone.io/github.com/metapolator/metapolator/latest)
-
-
-In 2013 (and the first few months of 2014) a v1 prototype was developed. This is now deprecated software, and this page acts as an archive of v1 related documentation.
+_In 2013 (and the first few months of 2014) a v1 prototype was developed. This is now deprecated software, and this page acts as an archive of v1 related documentation._
 
 ## Tutorial
 
 Simon Egli wrote a [tutorial for the current prototype](https://docs.google.com/document/d/1fiYpDxoBaiymMjzxptRZr6HkDaF3QqdEZuq_Vdz2JjU/edit).
+(TODO: move this to the gh-pages branch as html)
 
 For historical reference you may like to read [the first tutorial](http://metapolator.com/tutorial.html)
 
